JEKT-1395 ❇️ New     - Dataset        - DS_SAP_01_TVLST        - DS_SAP_01_TVAKT        - DS_SAP_01_TVAUT        - DS_SAP_01_T176T        - DS_SAP_01_TVFST
🔁 Modified
    - Pipeline
       - SAP_01_MD_SLS_ORDR_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN
    - Dataset
       - DS_SAP_01_TVKOT
       - DS_SAP_01_TVTWT
       - DS_SAP_01_TSPAT

--- a/src/datasets/DS_SAP_01_TVAUT/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_TVAUT/pbt_aspects.yml
@@ -9,13 +9,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: VKORG
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: SPRAS
     type: string
     nullable: true
@@ -30,7 +23,14 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: VTEXT
+  - name: AUGRU
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BEZEI
     type: string
     nullable: true
     metadata:
