--- a/src/datasets/DS_SAP_01_TVLST/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_TVLST/pbt_aspects.yml
@@ -9,13 +9,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: VKORG
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: SPRAS
     type: string
     nullable: true
@@ -24,6 +17,13 @@ schema:
       mappings: []
       tags: []
   - name: MANDT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LIFSP
     type: string
     nullable: true
     metadata:
