--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1727,9 +1727,17 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-01 19:17:50'
-    modifiedAt: '2023-05-01 20:21:41'
+    modifiedAt: '2023-05-02 14:19:06'
     datasets:
       inputs:
+      - datasets/DS_SAP_01_T176T
+      - datasets/DS_SAP_01_TSPAT
+      - datasets/DS_SAP_01_TVAKT
+      - datasets/DS_SAP_01_TVAUT
+      - datasets/DS_SAP_01_TVFST
+      - datasets/DS_SAP_01_TVKOT
+      - datasets/DS_SAP_01_TVLST
+      - datasets/DS_SAP_01_TVTWT
       - datasets/DS_SAP_01_VBAK
       outputs:
       - datasets/MD_SLS_ORDR
@@ -5011,7 +5019,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-03-20 12:13:46'
-    modifiedAt: '2023-04-13 15:09:44'
+    modifiedAt: '2023-05-02 14:09:50'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -5041,7 +5049,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-03-20 12:28:00'
-    modifiedAt: '2023-04-13 15:10:13'
+    modifiedAt: '2023-05-02 14:06:16'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -5056,7 +5064,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-03-20 12:31:42'
-    modifiedAt: '2023-04-13 15:10:28'
+    modifiedAt: '2023-05-02 14:08:36'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6409,6 +6417,81 @@ datasets:
         author: lsorarra@its.jnj.com
         createdAt: '2023-04-27 17:43:22'
         modifiedAt: '2023-04-27 17:43:22'
+  datasets/DS_SAP_01_TVAKT:
+    name: DS_SAP_01_TVAKT
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-02 13:41:44'
+    modifiedAt: '2023-05-02 13:41:44'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-02 13:41:44'
+        modifiedAt: '2023-05-02 13:41:44'
+  datasets/DS_SAP_01_TVFST:
+    name: DS_SAP_01_TVFST
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-02 13:45:07'
+    modifiedAt: '2023-05-02 13:45:07'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-02 13:45:07'
+        modifiedAt: '2023-05-02 13:45:07'
+  datasets/DS_SAP_01_TVLST:
+    name: DS_SAP_01_TVLST
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-02 13:53:53'
+    modifiedAt: '2023-05-02 13:53:53'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-02 13:53:53'
+        modifiedAt: '2023-05-02 13:53:53'
+  datasets/DS_SAP_01_TVAUT:
+    name: DS_SAP_01_TVAUT
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-02 14:14:14'
+    modifiedAt: '2023-05-02 14:14:14'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-02 14:14:14'
+        modifiedAt: '2023-05-02 14:14:14'
+  datasets/DS_SAP_01_T176T:
+    name: DS_SAP_01_T176T
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-02 14:19:04'
+    modifiedAt: '2023-05-02 14:19:04'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-02 14:19:04'
+        modifiedAt: '2023-05-02 14:19:04'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
