JEKT-1395 ❇️ New     - Dataset        - DS_SAP_01_TVV5T        - DS_SAP_01_TVV3T        - DS_SAP_01_TVV1T        - DS_SAP_01_T001        - DS_SAP_01_TVV4T        - DS_SAP_01_TVAU        - DS_SAP_01_TVV2T        - DS_SAP_01_VBUK
🔁 Modified
    - Dataset
       - DS_SAP_01_VBAK
    - Pipeline
       - SAP_01_MD_SLS_ORDR_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1727,18 +1727,26 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-01 19:17:50'
-    modifiedAt: '2023-05-02 14:19:06'
+    modifiedAt: '2023-05-02 14:40:36'
     datasets:
       inputs:
+      - datasets/DS_SAP_01_T001
       - datasets/DS_SAP_01_T176T
       - datasets/DS_SAP_01_TSPAT
       - datasets/DS_SAP_01_TVAKT
+      - datasets/DS_SAP_01_TVAU
       - datasets/DS_SAP_01_TVAUT
       - datasets/DS_SAP_01_TVFST
       - datasets/DS_SAP_01_TVKOT
       - datasets/DS_SAP_01_TVLST
       - datasets/DS_SAP_01_TVTWT
+      - datasets/DS_SAP_01_TVV1T
+      - datasets/DS_SAP_01_TVV2T
+      - datasets/DS_SAP_01_TVV3T
+      - datasets/DS_SAP_01_TVV4T
+      - datasets/DS_SAP_01_TVV5T
       - datasets/DS_SAP_01_VBAK
+      - datasets/DS_SAP_01_VBUK
       outputs:
       - datasets/MD_SLS_ORDR
     subgraphs: []
@@ -4959,7 +4967,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-03-31 18:51:09'
-    modifiedAt: '2023-05-01 20:08:18'
+    modifiedAt: '2023-05-02 14:36:01'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6492,6 +6500,126 @@ datasets:
         author: lsorarra@its.jnj.com
         createdAt: '2023-05-02 14:19:04'
         modifiedAt: '2023-05-02 14:19:04'
+  datasets/DS_SAP_01_TVAU:
+    name: DS_SAP_01_TVAU
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-02 14:22:18'
+    modifiedAt: '2023-05-02 14:22:18'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-02 14:22:18'
+        modifiedAt: '2023-05-02 14:22:18'
+  datasets/DS_SAP_01_TVV1T:
+    name: DS_SAP_01_TVV1T
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-02 14:26:10'
+    modifiedAt: '2023-05-02 14:26:11'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-02 14:26:10'
+        modifiedAt: '2023-05-02 14:26:10'
+  datasets/DS_SAP_01_TVV2T:
+    name: DS_SAP_01_TVV2T
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-02 14:28:26'
+    modifiedAt: '2023-05-02 14:28:26'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-02 14:28:26'
+        modifiedAt: '2023-05-02 14:28:26'
+  datasets/DS_SAP_01_TVV3T:
+    name: DS_SAP_01_TVV3T
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-02 14:30:09'
+    modifiedAt: '2023-05-02 14:30:09'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-02 14:30:09'
+        modifiedAt: '2023-05-02 14:30:09'
+  datasets/DS_SAP_01_TVV4T:
+    name: DS_SAP_01_TVV4T
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-02 14:31:49'
+    modifiedAt: '2023-05-02 14:31:50'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-02 14:31:49'
+        modifiedAt: '2023-05-02 14:31:49'
+  datasets/DS_SAP_01_TVV5T:
+    name: DS_SAP_01_TVV5T
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-02 14:33:32'
+    modifiedAt: '2023-05-02 14:33:32'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-02 14:33:32'
+        modifiedAt: '2023-05-02 14:33:32'
+  datasets/DS_SAP_01_T001:
+    name: DS_SAP_01_T001
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-02 14:35:19'
+    modifiedAt: '2023-05-02 14:35:20'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-02 14:35:19'
+        modifiedAt: '2023-05-02 14:35:19'
+  datasets/DS_SAP_01_VBUK:
+    name: DS_SAP_01_VBUK
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-02 14:38:48'
+    modifiedAt: '2023-05-02 14:38:48'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-02 14:38:48'
+        modifiedAt: '2023-05-02 14:38:48'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
