--- a/src/datasets/MD_CRNCY/pbt_aspects.yml
+++ b/src/datasets/MD_CRNCY/pbt_aspects.yml
@@ -23,15 +23,15 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: DEC_PLACE_CNT
+  - name: CRNCY_ALT_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CRNCY_LONG_NM
-    type: string
+  - name: VLD_TO_DTTM
+    type: timestamp
     nullable: true
     metadata:
       description: ''
@@ -39,6 +39,13 @@ schema:
       tags: []
   - name: NUM_OF_DEC_PLACES
     type: integer
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PRMRY_SAP_CRNCY_CD_ISO_CD
+    type: string
     nullable: true
     metadata:
       description: ''
