JEKT-402 🔁 Modified     - Job        - JOB_MD_MATL_ALT_UOM_JOB     - Pipeline        - MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ        - MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI_HMD     - Dataset        - MD_MATL_ALT_UOM        - DS_SAP_01_MARM        - DS_SAP_MARA_01
❇️ New
    - Job
       - JOB_MD_MATL_ALT_UOM_HM2

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -644,7 +644,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-05 09:54:31'
-    modifiedAt: '2023-04-27 13:54:12'
+    modifiedAt: '2023-05-02 15:52:56'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F41002
@@ -661,7 +661,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-05 11:55:35'
-    modifiedAt: '2023-05-01 17:19:58'
+    modifiedAt: '2023-05-02 15:32:04'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARM
@@ -1971,7 +1971,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-24 16:05:28'
+    modifiedAt: '2023-05-02 15:39:47'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -4236,7 +4236,7 @@ datasets:
     description: ''
     author: natkins7@its.jnj.com
     createdAt: '2023-04-05 12:01:01'
-    modifiedAt: '2023-04-13 13:47:59'
+    modifiedAt: '2023-05-02 15:25:40'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -4251,7 +4251,7 @@ datasets:
     description: ''
     author: natkins7@its.jnj.com
     createdAt: '2023-04-05 12:03:26'
-    modifiedAt: '2023-04-13 13:48:15'
+    modifiedAt: '2023-05-02 15:25:40'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -5403,8 +5403,8 @@ jobs:
     modifiedAt: '2023-04-14 15:00:18'
     author: jcovezd1@its.jnj.com
   jobs/JOB_MD_MATL_ALT_UOM:
-    name: JOB_MD_MATL_ALT_UOM
-    description: ''
+    name: JOB_MD_MATL_ALT_UOM_JOB
+    description: JOB_MD_MATL_ALT_UOM_JOB
     fabricUID: 32
     scheduler:
       Databricks: {}
@@ -5426,7 +5426,32 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-04-28 11:01:08'
-    modifiedAt: '2023-05-02 12:44:08'
+    modifiedAt: '2023-05-02 15:36:01'
+    author: natkins7@its.jnj.com
+  jobs/JOB_MD_MATL_ALT_UOM_HM2:
+    name: JOB_MD_MATL_ALT_UOM_HM2
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-02 15:37:46'
+    modifiedAt: '2023-05-02 15:38:18'
     author: natkins7@its.jnj.com
 functions:
   author: null
