JEKT-1351 ❇️ New     - Job        - JOB_MD_CRNCY

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7882,6 +7882,33 @@ jobs:
     createdAt: '2023-05-02 16:04:12'
     modifiedAt: '2023-05-02 16:05:10'
     author: jcovezd1@its.jnj.com
+  jobs/JOB_MD_CRNCY:
+    name: JOB_MD_CRNCY
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_MD_CRNCY_SVS_BWI_ATL
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
+    - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-02 16:06:45'
+    modifiedAt: '2023-05-02 16:17:37'
+    author: jcovezd1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
