--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1092,9 +1092,10 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-01 20:46:31'
-    modifiedAt: '2023-05-01 20:56:09'
+    modifiedAt: '2023-05-02 17:18:04'
     datasets:
-      inputs: []
+      inputs:
+      - datasets/DS_JDE_F0005
       outputs:
       - datasets/MD_MATL_UOM
     subgraphs: []
@@ -2425,7 +2426,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-01 20:46:38'
+    modifiedAt: '2023-05-02 17:16:46'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -4873,6 +4874,21 @@ datasets:
         author: ypatel8@its.jnj.com
         createdAt: '2023-04-28 20:47:17'
         modifiedAt: '2023-04-28 20:47:17'
+  datasets/DS_JDE_F0005:
+    name: DS_JDE_F0005
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-05-02 17:12:56'
+    modifiedAt: '2023-05-02 17:12:56'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-05-02 17:12:56'
+        modifiedAt: '2023-05-02 17:12:56'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
