JEKT-1495(Added JDE systems to Pipeline Config) 🔁 Modified     - Pipeline        - JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR

--- a/src/pipelines/JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR/pbt_aspects.yml
+++ b/src/pipelines/JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR/pbt_aspects.yml
@@ -1,6 +1,14 @@
 version: 1
 configurations:
+- DJD
+- MTR
+- JET
+- JES
+- BW2
+- SJD
 - default
 - GMD
-- BW2
+- JSW
+- JEM
+- DEU
 dependencies: []
