JEKT-1211 - 🔁 Modified - Update for HMD to Pipeline Config and Job     - Pipeline        - SAP_MD_MATL_BOM     - Job        - JOB_MD_MATL_BOM

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1247,7 +1247,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-06 19:35:46'
-    modifiedAt: '2023-04-06 21:05:37'
+    modifiedAt: '2023-05-02 18:49:33'
     datasets:
       inputs:
       - datasets/SAP_01_MAST
@@ -7983,7 +7983,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-04-06 21:07:36'
-    modifiedAt: '2023-04-10 16:20:36'
+    modifiedAt: '2023-05-02 18:50:38'
     author: smille29@its.jnj.com
 functions:
   author: null
@@ -7995,6 +7995,10 @@ functions:
   expressions: {}
 subgraphs: {}
 sqlModels: {}
+sqlMacros: {}
+sqlSeeds: {}
+sqlSources: {}
+sqlUnreferencedSources: {}
 sqlPipeline: null
 dependencies: []
 projectDependencies: {}
