--- a/src/datasets/SAP_02_STKO/pbt_aspects.yml
+++ b/src/datasets/SAP_02_STKO/pbt_aspects.yml
@@ -205,6 +205,34 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: VALID_TO
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: VALID_TO_RKEY
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ECN_TO
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ECN_TO_RKEY
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _pk_
     type: string
     nullable: true
