JEKT-1421: added JDE systems ❇️ New     - Dataset        - DS_JDE_01_F43199     - Pipeline        - jde_md_doc_itm_incm_invc
🔁 Modified
    - Dataset
       - MD_DOC_ITM_INCM_INVC

--- a/src/datasets/MD_DOC_ITM_INCM_INVC/pbt_aspects.yml
+++ b/src/datasets/MD_DOC_ITM_INCM_INVC/pbt_aspects.yml
@@ -662,14 +662,14 @@ schema:
       tags: []
   - name: DOC_ITM_IN_INVC_DOC
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: FISC_YR
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
