--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1605,6 +1605,22 @@ pipelines:
       - datasets/MD_DOC_ITM_INCM_INVC
     subgraphs: []
     dependencies: {}
+  pipelines/jde_md_doc_itm_incm_invc:
+    name: jde_md_doc_itm_incm_invc
+    description: ''
+    author: jcacere7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-02 20:47:57'
+    modifiedAt: '2023-05-02 23:56:33'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_01_F43199
+      outputs:
+      - datasets/MD_DOC_ITM_INCM_INVC
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -1731,7 +1747,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-27 19:51:02'
+    modifiedAt: '2023-05-02 23:23:00'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6174,6 +6190,21 @@ datasets:
         author: jcacere7@its.jnj.com
         createdAt: '2023-04-26 18:39:08'
         modifiedAt: '2023-04-26 18:39:08'
+  datasets/DS_JDE_01_F43199:
+    name: DS_JDE_01_F43199
+    description: ''
+    author: jcacere7@its.jnj.com
+    createdAt: '2023-05-02 22:50:51'
+    modifiedAt: '2023-05-02 22:53:16'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcacere7@its.jnj.com
+        createdAt: '2023-05-02 22:50:51'
+        modifiedAt: '2023-05-02 22:50:51'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
