--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7297,13 +7297,14 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/SAP_RSEG
+    - pipelines/jde_md_doc_itm_incm_invc
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: null
     createdAt: '2023-04-26 20:30:55'
-    modifiedAt: '2023-05-01 23:37:03'
+    modifiedAt: '2023-05-03 00:04:05'
     author: jcacere7@its.jnj.com
 functions:
   author: null
