--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1736,10 +1736,11 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-02 10:39:17'
-    modifiedAt: '2023-05-02 15:20:07'
+    modifiedAt: '2023-05-03 09:40:52'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F0005_41
+      - datasets/DS_JDE_01_F4101
       outputs: []
     subgraphs: []
     dependencies: {}
@@ -4359,7 +4360,7 @@ datasets:
     description: ''
     author: natkins7@its.jnj.com
     createdAt: '2023-03-20 13:56:03'
-    modifiedAt: '2023-04-13 15:24:15'
+    modifiedAt: '2023-05-03 09:27:04'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
