--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -808,9 +808,10 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-17 19:33:05'
-    modifiedAt: '2023-05-02 15:45:17'
+    modifiedAt: '2023-05-03 16:42:56'
     datasets:
       inputs:
+      - datasets/DS_SAP_01_T001
       - datasets/DS_SAP_01_T001K
       - datasets/DS_SAP_01_T001W
       - datasets/DS_SAP_01_T005T
@@ -1863,7 +1864,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-25 12:33:24'
+    modifiedAt: '2023-05-03 16:42:35'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -4558,6 +4559,21 @@ datasets:
         author: mbolado1@its.jnj.com
         createdAt: '2023-04-21 13:24:54'
         modifiedAt: '2023-04-21 13:24:54'
+  datasets/DS_SAP_01_T001:
+    name: DS_SAP_01_T001
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-05-03 16:39:14'
+    modifiedAt: '2023-05-03 16:39:15'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-05-03 16:39:15'
+        modifiedAt: '2023-05-03 16:39:15'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
