JEKT-1421: changed mapping for PK values 🔁 Modified     - Pipeline        - jde_md_doc_itm_incm_invc_bw2_deu_gmd_jem_jes_jet_jsw_sjd     - Dataset        - MD_DOC_ITM_INCM_INVC

--- a/src/datasets/MD_DOC_ITM_INCM_INVC/pbt_aspects.yml
+++ b/src/datasets/MD_DOC_ITM_INCM_INVC/pbt_aspects.yml
@@ -662,7 +662,7 @@ schema:
       tags: []
   - name: DOC_ITM_IN_INVC_DOC
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
