JEKT-1367: JDE Pipeline development 🔁 Modified     - Pipeline        - JDE_01_MD_CUST

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1682,12 +1682,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-26 13:16:10'
-    modifiedAt: '2023-04-26 13:42:28'
+    modifiedAt: '2023-05-04 02:54:05'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F0101
       - datasets/DS_JDE_01_F0101_ADT
-      outputs: []
+      outputs:
+      - datasets/MD_CUST
     subgraphs: []
     dependencies: {}
 datasets:
