--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1736,7 +1736,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-02 10:39:17'
-    modifiedAt: '2023-05-03 18:07:23'
+    modifiedAt: '2023-05-03 16:17:36'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F0005_41
@@ -4360,7 +4360,7 @@ datasets:
     description: ''
     author: natkins7@its.jnj.com
     createdAt: '2023-03-20 13:56:03'
-    modifiedAt: '2023-05-03 16:45:18'
+    modifiedAt: '2023-05-03 12:55:13'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6478,6 +6478,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-05-02 10:49:50'
         modifiedAt: '2023-05-02 10:49:50'
+  datasets/DS_JDE_02_F4101:
+    name: DS_JDE_02_F4101
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-03 12:34:47'
+    modifiedAt: '2023-05-03 12:34:47'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-03 12:34:47'
+        modifiedAt: '2023-05-03 12:34:47'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
