--- a/src/datasets/MD_SUP/pbt_aspects.yml
+++ b/src/datasets/MD_SUP/pbt_aspects.yml
@@ -150,7 +150,7 @@ schema:
       mappings: []
       tags: []
   - name: CRT_ON_DTTM
-    type: string
+    type: timestamp
     nullable: true
     metadata:
       description: ''
@@ -325,13 +325,13 @@ schema:
       mappings: []
       tags: []
   - name: EXTRNL_MFR_CD
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _l0_upt_
+  - name: _l0_upt
     type: timestamp
     nullable: true
     metadata:
@@ -375,6 +375,13 @@ schema:
       tags: []
   - name: DAI_UPDT_DTTM
     type: timestamp
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _deleted_
+    type: string
     nullable: false
     metadata:
       description: ''
