JEKT-1624 🔁 Modified     - Pipeline        - MD_SUP_1_hcs_btb_na_btb_latam_mrs        - MD_SUP_10_gmd        - MD_SUP_11_hmd     - Dataset        - MD_SUP

--- a/src/datasets/MD_SUP/pbt_aspects.yml
+++ b/src/datasets/MD_SUP/pbt_aspects.yml
@@ -31,21 +31,21 @@ schema:
       mappings: []
       tags: []
   - name: SUP_NM3
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SUP_NM4
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SUP_SHRT_NM
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -59,14 +59,14 @@ schema:
       mappings: []
       tags: []
   - name: TAX_JURIS_CD
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: TRSPN_ZN_CD
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -87,14 +87,14 @@ schema:
       mappings: []
       tags: []
   - name: PSTL_BOX_CD
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PSTL_BOX_PSTL_CD_NUM
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -122,28 +122,28 @@ schema:
       mappings: []
       tags: []
   - name: CTRY_SHRT_NM
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ADDR_NUM
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: GLN1_NBR
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SGMNT_CD
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -171,56 +171,56 @@ schema:
       mappings: []
       tags: []
   - name: ALT_PAYEE_NUM
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DEL_IND
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PSTNG_BLK_IND
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PRCH_BLK_IND
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: TAX_NUM1
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: TAX_NUM2
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ONE_TIME_ACCT_IND
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: TRAD_PTNR_CO_CD
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -234,42 +234,42 @@ schema:
       mappings: []
       tags: []
   - name: NTRL_PRSN_IND
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PLNT_CD
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PMT_BLK_IND
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: STD_CARR_ACCS_CD
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: TAX_TYPE_CD
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: TAX_NUM_TYPE_CD
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -283,55 +283,55 @@ schema:
       mappings: []
       tags: []
   - name: GLN2_NBR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TAX_NUM4
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TAX_NUM5
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: GLN3_NBR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BLOK_SUP_IND
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: POD_IND
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: EXTRNL_MFR_CD
     type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _l0_upt
+  - name: TAX_NUM4
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TAX_NUM5
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: GLN3_NBR
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BLOK_SUP_IND
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: POD_IND
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: EXTRNL_MFR_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _l0_upt_
     type: timestamp
     nullable: true
     metadata:
