--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1057,7 +1057,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-24 15:50:41'
-    modifiedAt: '2023-04-24 16:29:04'
+    modifiedAt: '2023-05-04 14:39:51'
     datasets:
       inputs:
       - datasets/DS_SAP_NSDM_V_MARC
@@ -5889,6 +5889,10 @@ functions:
   expressions: {}
 subgraphs: {}
 sqlModels: {}
+sqlMacros: {}
+sqlSeeds: {}
+sqlSources: {}
+sqlUnreferencedSources: {}
 sqlPipeline: null
 dependencies: []
 projectDependencies: {}
